fixed overflow

--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -238,6 +238,8 @@ h3 {
     padding: 0;
   }
 
+  
+
   .skills ul li:last-child {
     width: 100%;
     padding: 0;
@@ -250,6 +252,7 @@ h3 {
   }
   .ny {
     left: -80%;
+    bottom: 0;
   }
 }
 
